tests/integrations/basic-fail/tests/actual_tests/rustc_ice.stderr
error: internal compiler error[E0308]: mismatched types
 --> tests/actual_tests/rustc_ice.rs:8:9
  |
8 |     add("42", 3);
  |     --- ^^^^ expected `usize`, found `&str`
  |     |
  |     arguments to this function are incorrect
  |
note: function defined here
 --> $DIR/tests/integrations/basic-fail/src/lib.rs:1:8
  |
1 | pub fn add(left: usize, right: usize) -> usize {
  |        ^^^

thread 'rustc' panicked
